# EasySockets

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  generate_docs.py
.github/ISSUE_TEMPLATE/: code-api-change.md
.github/workflows/: cmake-multi-platform.yml  static.yml
doc/: Doxyfile  custom.css  header.html  layout.xml
doc/api/: context.txt  context_shutdown.txt  socket.txt  socket_accept_connection.txt  socket_bind_to.txt  socket_connect_to.txt  socket_constructor.txt  socket_listen_for_connections.txt  socket_receive_data.txt  socket_receive_data_from.txt  socket_send_data.txt  socket_send_data_to.txt
include/EasySockets/: EasySockets.h  EasySockets.hpp
include/EasySockets/Api/: Addresses.h  Addresses.hpp  ContextApi.hpp  Documentation.h  Documentation.hpp  SocketApi.h  SocketApi.hpp  SocketTypes.h  SocketTypes.hpp
include/EasySockets/Posix/: PosixContext.hpp  PosixSocket.hpp
include/EasySockets/Windows/: WindowsSocket.h  WindowsSocket.hpp  WinsockContext.h  WinsockContext.hpp
src/Posix/: PosixSocket.cpp
src/Windows/: WindowsSocket.cpp  WindsockContext.cpp
tests/: CMakeLists.txt  TestTcp.cpp  TestUdp.cpp
